--- a/supports-cours-cicd/html-output/evaluations/qcm-module-1-fondamentaux.html
+++ b/supports-cours-cicd/html-output/evaluations/qcm-module-1-fondamentaux.html
@@ -16,6 +16,8 @@
             <nav class="navigation">
                 <ul>
                     <li><a href="../index.html">Accueil</a></li>
+                    <li><a href="qcm-intermediaires.html">QCM Intermédiaires</a></li>
+                    <li><a href="qcm-final.html">QCM Final</a></li>
                 </ul>
             </nav>
         </div>
@@ -24,7 +26,7 @@
     <main class="main-content">
         <div class="container">
             <section class="hero-section">
-                <div class="module-badge">QCM INTERACTIF</div>
+                <div class="module-badge">QCM INTERMÉDIAIRE</div>
                 <h1 class="module-title">QCM Module 1 - Fondamentaux CI/CD</h1>
                 <p class="module-description">Évaluation des connaissances acquises sur les concepts fondamentaux CI/CD, l'automatisation des tests et les pipelines de base</p>
                 <div class="module-meta">
@@ -54,6 +56,11 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2024 Formation CI/CD - Tous droits réservés</p>
+            <div class="footer-links">
+                <a href="../guides/guide-formateur.html" class="footer-link">Guide Formateur</a>
+                <a href="../guides/guide-apprenant.html" class="footer-link">Guide Apprenant</a>
+                <a href="../index.html" class="footer-link">Accueil</a>
+            </div>
         </div>
     </footer>
 
