--- a/supports-cours-cicd/html-output/index.html
+++ b/supports-cours-cicd/html-output/index.html
@@ -16,7 +16,9 @@
             <nav class="navigation">
                 <ul>
                     <li><a href="#modules">Modules</a></li>
+                    <li><a href="#exercices">Exercices</a></li>
                     <li><a href="#evaluations">Évaluations</a></li>
+                    <li><a href="#guides">Guides</a></li>
                 </ul>
             </nav>
         </div>
@@ -27,21 +29,68 @@
             <section class="hero-section">
                 <div class="module-badge">Formation Complète</div>
                 <h1 class="module-title">Supports de Cours CI/CD Interactifs</h1>
-                <p class="module-description">Formation complète sur l'intégration et le déploiement continus avec QCM interactifs</p>
+                <p class="module-description">Formation complète sur l'intégration et le déploiement continus avec exercices pratiques et évaluations interactives</p>
                 <div class="module-meta">
                     <span class="duration">⏱️ Durée: 5 jours</span>
                     <span class="difficulty">📊 Niveau: Intermédiaire</span>
                 </div>
             </section>
 
+            <section id="modules" class="content-section">
+                <h2>📚 Modules de Formation</h2>
+                <div class="modules-grid">
+                    <div class="module-card">
+                        <h3><a href="modules/module-1.html">Module 1 - Fondamentaux CI/CD</a></h3>
+                        <p>Introduction aux concepts de base, pipelines et outils essentiels</p>
+                        <div class="module-meta">
+                            <span>⏱️ 4h</span>
+                            <span>📋 8 questions</span>
+                            <span>🔧 3 exercices</span>
+                        </div>
+                    </div>
+                    <div class="module-card">
+                        <h3><a href="modules/module-2.html">Module 2 - IA et Automatisation</a></h3>
+                        <p>Intelligence artificielle appliquée aux tests automatisés</p>
+                        <div class="module-meta">
+                            <span>⏱️ 10h</span>
+                            <span>📋 20 questions</span>
+                            <span>🔧 5 exercices</span>
+                        </div>
+                    </div>
+                    <div class="module-card">
+                        <h3><a href="modules/module-3.html">Module 3 - Tests Fonctionnels</a></h3>
+                        <p>Tests fonctionnels, de performance et de sécurité</p>
+                        <div class="module-meta">
+                            <span>⏱️ 6h</span>
+                            <span>📋 12 questions</span>
+                            <span>🔧 6 exercices</span>
+                        </div>
+                    </div>
+                    <div class="module-card">
+                        <h3><a href="modules/module-4.html">Module 4 - Documentation</a></h3>
+                        <p>Documentation, reporting et monitoring des tests</p>
+                        <div class="module-meta">
+                            <span>⏱️ 2h</span>
+                            <span>📋 6 questions</span>
+                            <span>🔧 2 exercices</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <section id="evaluations" class="content-section">
-                <h2>📋 QCM Interactifs</h2>
-                <p>Testez vos connaissances avec nos QCM interactifs :</p>
-                <div style="display: flex; gap: 1rem; flex-wrap: wrap; margin-top: 1rem;">
-                    <a href="evaluations/qcm-module-1-fondamentaux.html" class="btn btn-primary">Module 1 - Fondamentaux</a>
-                    <a href="evaluations/qcm-module-2-ia-automatisation.html" class="btn btn-primary">Module 2 - IA</a>
-                    <a href="evaluations/qcm-module-3-tests-fonctionnels.html" class="btn btn-primary">Module 3 - Tests</a>
-                    <a href="evaluations/qcm-module-4-documentation.html" class="btn btn-primary">Module 4 - Documentation</a>
+                <h2>📋 Évaluations</h2>
+                <div class="evaluation-links">
+                    <a href="evaluations/qcm-final.html" class="btn btn-primary">QCM Final (45 questions)</a>
+                    <a href="evaluations/qcm-intermediaires.html" class="btn btn-secondary">QCM Intermédiaires</a>
+                </div>
+            </section>
+
+            <section id="guides" class="content-section">
+                <h2>📖 Guides</h2>
+                <div class="guides-links">
+                    <a href="guides/guide-formateur.html" class="btn btn-outline">Guide Formateur</a>
+                    <a href="guides/guide-apprenant.html" class="btn btn-outline">Guide Apprenant</a>
                 </div>
             </section>
         </div>
@@ -50,6 +99,11 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2024 Formation CI/CD - Tous droits réservés</p>
+            <div class="footer-links">
+                <a href="guides/guide-formateur.html" class="footer-link">Guide Formateur</a>
+                <a href="guides/guide-apprenant.html" class="footer-link">Guide Apprenant</a>
+                <a href="#" class="footer-link">Support</a>
+            </div>
         </div>
     </footer>
 
