--- a/supports-cours-cicd/html-output/modules/module-2.html
+++ b/supports-cours-cicd/html-output/modules/module-2.html
@@ -38,6 +38,83 @@
             <section id="contenu" class="content-section">
                 <h2>📚 Contenu du Module</h2>
                 
+                <div class="module-info">
+                    <h3>📋 Informations Générales</h3>
+                    <ul>
+                        <li><strong>Durée</strong> : 10 heures (2,5 jours)</li>
+                        <li><strong>Niveau</strong> : Intermédiaire</li>
+                        <li><strong>Prérequis</strong> : Outils de test basés sur l'IA : Testim, Mabl, Applitools</li>
+                        <li><strong>Compétences</strong> : C8, C17, C19</li>
+                    </ul>
+                </div>
+
+                <div class="objectives">
+                    <h3>🎯 Objectifs Pédagogiques</h3>
+                    <p>À l'issue de ce module, vous serez capable de :</p>
+                    <ul class="objectives-list">
+                        <li>Utiliser l'IA pour générer et améliorer les tests automatisés</li>
+                        <li>Déployer des modèles d'apprentissage automatique pour optimiser la couverture des tests</li>
+                        <li>Configurer et utiliser des outils de test basés sur l'IA</li>
+                        <li>Analyser et optimiser les résultats de tests avec machine learning</li>
+                    </ul>
+                </div>
+
+                <div class="table-of-contents">
+                    <h3>📚 Sections du Module</h3>
+                    
+                    <div class="section-card">
+                        <h4>Section 1 : Introduction à l'IA dans les Tests</h4>
+                        <ul>
+                            <li>Concepts de base de l'IA appliquée aux tests</li>
+                            <li>Avantages et limitations</li>
+                            <li>Outils disponibles sur le marché</li>
+                        </ul>
+                    </div>
+
+                    <div class="section-card">
+                        <h4>Section 2 : Génération Automatique de Tests</h4>
+                        <ul>
+                            <li>Utilisation du NLP pour créer des cas de test</li>
+                            <li>Génération de données de test intelligente</li>
+                            <li>Optimisation de la couverture de code</li>
+                        </ul>
+                    </div>
+
+                    <div class="section-card">
+                        <h4>Section 3 : Outils IA-Powered</h4>
+                        <ul>
+                            <li>Configuration et utilisation de Testim</li>
+                            <li>Tests visuels avec Applitools</li>
+                            <li>Automatisation intelligente avec Mabl</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="exercises-overview">
+                    <h3>💻 Exercices Pratiques</h3>
+                    <div class="exercises-grid">
+                        <div class="exercise-card">
+                            <h4>Exercice 2.1 - Configuration et utilisation de Testim</h4>
+                            <p><strong>Durée:</strong> 60 min | <strong>Difficulté:</strong> 🟡 Intermédiaire</p>
+                        </div>
+                        <div class="exercise-card">
+                            <h4>Exercice 2.2 - Tests visuels automatisés avec Applitools</h4>
+                            <p><strong>Durée:</strong> 45 min | <strong>Difficulté:</strong> 🟡 Intermédiaire</p>
+                        </div>
+                        <div class="exercise-card">
+                            <h4>Exercice 2.3 - Détection d'anomalies dans les logs avec IA</h4>
+                            <p><strong>Durée:</strong> 90 min | <strong>Difficulté:</strong> 🔴 Avancé</p>
+                        </div>
+                        <div class="exercise-card">
+                            <h4>Exercice 2.4 - Génération de cas de test avec modèles NLP</h4>
+                            <p><strong>Durée:</strong> 120 min | <strong>Difficulté:</strong> 🔴 Avancé</p>
+                        </div>
+                        <div class="exercise-card">
+                            <h4>Exercice 2.5 - Analyse prédictive des zones à risque</h4>
+                            <p><strong>Durée:</strong> 90 min | <strong>Difficulté:</strong> 🔴 Avancé</p>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <section id="exercices" class="content-section">
@@ -52,7 +129,10 @@
                 <h2>📋 Évaluation</h2>
                 <div class="evaluation-info">
                     <p>Testez vos connaissances avec le QCM intermédiaire de ce module.</p>
-                    <a href="../evaluations/qcm-module-2.html" class="btn btn-success">Commencer le QCM</a>
+                    <div class="qcm-links">
+                        <a href="../evaluations/qcm-module-2-ia-automatisation.html" class="btn btn-success">QCM IA et Automatisation</a>
+                        <a href="../evaluations/qcm-module-2-ml-optimisation.html" class="btn btn-success">QCM ML et Optimisation</a>
+                    </div>
                 </div>
             </section>
 
