--- a/supports-cours-cicd/html-output/modules/module-3.html
+++ b/supports-cours-cicd/html-output/modules/module-3.html
@@ -38,6 +38,87 @@
             <section id="contenu" class="content-section">
                 <h2>📚 Contenu du Module</h2>
                 
+                <div class="module-info">
+                    <h3>📋 Informations Générales</h3>
+                    <ul>
+                        <li><strong>Durée</strong> : 6 heures (1,5 jour)</li>
+                        <li><strong>Niveau</strong> : Intermédiaire à Avancé</li>
+                        <li><strong>Prérequis</strong> : Environnements de test cloud, frameworks de test de charge</li>
+                        <li><strong>Compétences</strong> : C17, C18</li>
+                    </ul>
+                </div>
+
+                <div class="objectives">
+                    <h3>🎯 Objectifs Pédagogiques</h3>
+                    <p>À l'issue de ce module, vous serez capable de :</p>
+                    <ul class="objectives-list">
+                        <li>Exécuter des tests fonctionnels et non fonctionnels dans un pipeline automatisé</li>
+                        <li>Assurer la qualité logicielle en intégrant des tests de sécurité et de performance</li>
+                        <li>Configurer des environnements de test cloud</li>
+                        <li>Utiliser des outils de scan de sécurité et de performance</li>
+                    </ul>
+                </div>
+
+                <div class="table-of-contents">
+                    <h3>📚 Sections du Module</h3>
+                    
+                    <div class="section-card">
+                        <h4>Section 1 : Tests Fonctionnels Automatisés</h4>
+                        <ul>
+                            <li>Tests UI avec Selenium et Cypress</li>
+                            <li>Tests API avec Postman et RestAssured</li>
+                            <li>Intégration dans les pipelines CI/CD</li>
+                        </ul>
+                    </div>
+
+                    <div class="section-card">
+                        <h4>Section 2 : Tests de Performance</h4>
+                        <ul>
+                            <li>Simulation de charge avec JMeter</li>
+                            <li>Monitoring des temps de réponse</li>
+                            <li>Analyse des résultats de performance</li>
+                        </ul>
+                    </div>
+
+                    <div class="section-card">
+                        <h4>Section 3 : Tests de Sécurité</h4>
+                        <ul>
+                            <li>Scan de vulnérabilités avec OWASP ZAP</li>
+                            <li>Analyse des dépendances avec Snyk</li>
+                            <li>Intégration de la sécurité dans DevSecOps</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="exercises-overview">
+                    <h3>💻 Exercices Pratiques</h3>
+                    <div class="exercises-grid">
+                        <div class="exercise-card">
+                            <h4>Exercice 3.1 - Tests UI avec Selenium et Cypress</h4>
+                            <p><strong>Durée:</strong> 90 min | <strong>Difficulté:</strong> 🟡 Intermédiaire</p>
+                        </div>
+                        <div class="exercise-card">
+                            <h4>Exercice 3.2 - Tests API avec Postman et RestAssured</h4>
+                            <p><strong>Durée:</strong> 60 min | <strong>Difficulté:</strong> 🟡 Intermédiaire</p>
+                        </div>
+                        <div class="exercise-card">
+                            <h4>Exercice 3.3 - Simulation de charge avec JMeter</h4>
+                            <p><strong>Durée:</strong> 75 min | <strong>Difficulté:</strong> 🔴 Avancé</p>
+                        </div>
+                        <div class="exercise-card">
+                            <h4>Exercice 3.4 - Monitoring des temps de réponse</h4>
+                            <p><strong>Durée:</strong> 45 min | <strong>Difficulté:</strong> 🟡 Intermédiaire</p>
+                        </div>
+                        <div class="exercise-card">
+                            <h4>Exercice 3.5 - Scan de vulnérabilités avec OWASP ZAP</h4>
+                            <p><strong>Durée:</strong> 60 min | <strong>Difficulté:</strong> 🔴 Avancé</p>
+                        </div>
+                        <div class="exercise-card">
+                            <h4>Exercice 3.6 - Analyse des dépendances avec Snyk</h4>
+                            <p><strong>Durée:</strong> 45 min | <strong>Difficulté:</strong> 🟡 Intermédiaire</p>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <section id="exercices" class="content-section">
@@ -52,7 +133,7 @@
                 <h2>📋 Évaluation</h2>
                 <div class="evaluation-info">
                     <p>Testez vos connaissances avec le QCM intermédiaire de ce module.</p>
-                    <a href="../evaluations/qcm-module-3.html" class="btn btn-success">Commencer le QCM</a>
+                    <a href="../evaluations/qcm-module-3-tests-fonctionnels.html" class="btn btn-success">Commencer le QCM</a>
                 </div>
             </section>
 
