--- a/supports-cours-cicd/html-output/modules/module-4.html
+++ b/supports-cours-cicd/html-output/modules/module-4.html
@@ -38,6 +38,71 @@
             <section id="contenu" class="content-section">
                 <h2>📚 Contenu du Module</h2>
                 
+                <div class="module-info">
+                    <h3>📋 Informations Générales</h3>
+                    <ul>
+                        <li><strong>Durée</strong> : 2 heures (0,5 jour)</li>
+                        <li><strong>Niveau</strong> : Intermédiaire</li>
+                        <li><strong>Prérequis</strong> : Outils de reporting, solutions de monitoring</li>
+                        <li><strong>Compétences</strong> : C20, C33</li>
+                    </ul>
+                </div>
+
+                <div class="objectives">
+                    <h3>🎯 Objectifs Pédagogiques</h3>
+                    <p>À l'issue de ce module, vous serez capable de :</p>
+                    <ul class="objectives-list">
+                        <li>Rédiger une documentation claire et détaillée des tests</li>
+                        <li>Générer des rapports de tests automatisés pour un suivi efficace</li>
+                        <li>Mettre en place un monitoring des tests pour anticiper les régressions</li>
+                        <li>Configurer des systèmes d'alerting et de notification</li>
+                    </ul>
+                </div>
+
+                <div class="table-of-contents">
+                    <h3>📚 Sections du Module</h3>
+                    
+                    <div class="section-card">
+                        <h4>Section 1 : Documentation des Tests</h4>
+                        <ul>
+                            <li>Bonnes pratiques de documentation</li>
+                            <li>Templates et standards</li>
+                            <li>Documentation collaborative</li>
+                        </ul>
+                    </div>
+
+                    <div class="section-card">
+                        <h4>Section 2 : Reporting Automatisé</h4>
+                        <ul>
+                            <li>Génération de rapports avec Allure Report</li>
+                            <li>Dashboards et métriques</li>
+                            <li>Analyse des tendances</li>
+                        </ul>
+                    </div>
+
+                    <div class="section-card">
+                        <h4>Section 3 : Monitoring et Alerting</h4>
+                        <ul>
+                            <li>Configuration de dashboards avec Grafana</li>
+                            <li>Monitoring avec Prometheus</li>
+                            <li>Systèmes d'alerting intelligents</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="exercises-overview">
+                    <h3>💻 Exercices Pratiques</h3>
+                    <div class="exercises-grid">
+                        <div class="exercise-card">
+                            <h4>Exercice 4.1 - Génération de rapports avec Allure Report</h4>
+                            <p><strong>Durée:</strong> 60 min | <strong>Difficulté:</strong> 🟡 Intermédiaire</p>
+                        </div>
+                        <div class="exercise-card">
+                            <h4>Exercice 4.2 - Configuration de dashboards avec Grafana et Prometheus</h4>
+                            <p><strong>Durée:</strong> 90 min | <strong>Difficulté:</strong> 🔴 Avancé</p>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <section id="exercices" class="content-section">
@@ -52,7 +117,7 @@
                 <h2>📋 Évaluation</h2>
                 <div class="evaluation-info">
                     <p>Testez vos connaissances avec le QCM intermédiaire de ce module.</p>
-                    <a href="../evaluations/qcm-module-4.html" class="btn btn-success">Commencer le QCM</a>
+                    <a href="../evaluations/qcm-module-4-documentation.html" class="btn btn-success">Commencer le QCM</a>
                 </div>
             </section>
 
