--- a/supports-cours-cicd/html-output/modules/module-1.html
+++ b/supports-cours-cicd/html-output/modules/module-1.html
@@ -38,6 +38,92 @@
             <section id="contenu" class="content-section">
                 <h2>📚 Contenu du Module</h2>
                 
+                <div class="module-info">
+                    <h3>📋 Informations Générales</h3>
+                    <ul>
+                        <li><strong>Durée</strong> : 4 heures</li>
+                        <li><strong>Niveau</strong> : Débutant</li>
+                        <li><strong>Prérequis</strong> : Bases du développement logiciel, notions de Git</li>
+                        <li><strong>Compétences</strong> : C8, C17</li>
+                    </ul>
+                </div>
+
+                <div class="objectives">
+                    <h3>🎯 Objectifs Pédagogiques</h3>
+                    <p>À l'issue de ce module, vous serez capable de :</p>
+                    <ul class="objectives-list">
+                        <li>Comprendre les concepts fondamentaux CI/CD</li>
+                        <li>Différencier les tests manuels et automatisés</li>
+                        <li>Configurer un pipeline CI/CD de base</li>
+                        <li>Intégrer des tests automatisés dans un pipeline</li>
+                        <li>Utiliser GitHub Actions et Docker pour l'automatisation</li>
+                    </ul>
+                </div>
+
+                <div class="table-of-contents">
+                    <h3>📚 Table des Matières</h3>
+                    
+                    <div class="section-card">
+                        <h4>Section 1 : Introduction aux Concepts CI/CD (45 min)</h4>
+                        <ul>
+                            <li>1.1 Qu'est-ce que CI/CD ?</li>
+                            <li>1.2 Différences tests manuels vs automatisés</li>
+                            <li>1.3 Avantages de l'automatisation</li>
+                        </ul>
+                        <p><strong>💻 Exercice associé</strong> : Premier pipeline CI/CD</p>
+                    </div>
+
+                    <div class="section-card">
+                        <h4>Section 2 : Types et Catégories de Tests (45 min)</h4>
+                        <ul>
+                            <li>2.1 Tests unitaires, d'intégration, fonctionnels</li>
+                            <li>2.2 Pyramide des tests</li>
+                            <li>2.3 Tests de régression</li>
+                        </ul>
+                        <p><strong>💻 Exercice associé</strong> : Configuration de tests automatisés</p>
+                    </div>
+
+                    <div class="section-card">
+                        <h4>Section 3 : Intégration des Tests dans CI/CD (45 min)</h4>
+                        <ul>
+                            <li>3.1 Stratégies d'intégration</li>
+                            <li>3.2 Tests en parallèle</li>
+                            <li>3.3 Gestion des échecs</li>
+                        </ul>
+                        <p><strong>💻 Exercice associé</strong> : Intégration de tests en parallèle</p>
+                    </div>
+
+                    <div class="section-card">
+                        <h4>Section 4 : Outils et Bonnes Pratiques (45 min)</h4>
+                        <ul>
+                            <li>4.1 GitHub Actions</li>
+                            <li>4.2 Jenkins</li>
+                            <li>4.3 Docker pour les tests</li>
+                            <li>4.4 Bonnes pratiques</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="exercises-overview">
+                    <h3>💻 Exercices Pratiques</h3>
+                    <div class="exercises-grid">
+                        <div class="exercise-card">
+                            <h4>Exercice 1.1 - Premier pipeline CI/CD avec GitHub Actions</h4>
+                            <p><strong>Durée:</strong> 30 min | <strong>Difficulté:</strong> 🟢 Débutant</p>
+                            <p><strong>Outils:</strong> GitHub Actions, Docker</p>
+                        </div>
+                        <div class="exercise-card">
+                            <h4>Exercice 1.2 - Configuration de tests automatisés avec Docker</h4>
+                            <p><strong>Durée:</strong> 30 min | <strong>Difficulté:</strong> 🟢 Débutant</p>
+                            <p><strong>Outils:</strong> Docker, PyTest</p>
+                        </div>
+                        <div class="exercise-card">
+                            <h4>Exercice 1.3 - Intégration de tests en parallèle</h4>
+                            <p><strong>Durée:</strong> 30 min | <strong>Difficulté:</strong> 🟡 Intermédiaire</p>
+                            <p><strong>Outils:</strong> GitHub Actions, Matrix</p>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <section id="exercices" class="content-section">
@@ -52,7 +138,7 @@
                 <h2>📋 Évaluation</h2>
                 <div class="evaluation-info">
                     <p>Testez vos connaissances avec le QCM intermédiaire de ce module.</p>
-                    <a href="../evaluations/qcm-module-1.html" class="btn btn-success">Commencer le QCM</a>
+                    <a href="../evaluations/qcm-module-1-fondamentaux.html" class="btn btn-success">Commencer le QCM</a>
                 </div>
             </section>
 
